--- a/css/styles.css
+++ b/css/styles.css
@@ -1226,6 +1226,26 @@ h4 {
   justify-content: center;
   background: linear-gradient(45deg, hsl(183, 100%, 13%), hsl(183, 100%, 36%));
 }
+@media (max-width: 1531px) {
+  .videos {
+    min-height: 1980px;
+  }
+}
+@media (max-width: 1037px) {
+  .videos {
+    min-height: 2740px;
+  }
+}
+@media (max-width: 725px) {
+  .videos {
+    min-height: 2790px;
+  }
+}
+@media (max-width: 600px) {
+  .videos {
+    min-height: 2690px;
+  }
+}
 .videos__cont-contenido {
   margin-top: -70px;
 }
@@ -1240,6 +1260,21 @@ h4 {
   padding: 1.3rem 1.3rem 0.3rem;
   box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.5);
 }
+@media (max-width: 1260px) {
+  .videos__cont-titulo {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 725px) {
+  .videos__cont-titulo {
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 600px) {
+  .videos__cont-titulo {
+    margin-bottom: 100px;
+  }
+}
 .videos__titulo {
   margin: 0;
   background-image: linear-gradient(45deg, hsl(194, 100%, 13%), hsl(194, 100%, 17%), hsl(194, 100%, 22%), hsl(194, 100%, 27%), hsl(194, 100%, 32%), hsl(194, 100%, 37%), hsl(194, 100%, 42%), hsl(194, 100%, 47%), hsl(194, 100%, 52%));
@@ -1253,12 +1288,40 @@ h4 {
   position: absolute;
   width: 175px;
   z-index: 10;
-  top: 222px;
+  top: 229px;
   left: 175px;
+}
+@media (max-width: 1260px) {
+  .videos__sticker-adri {
+    display: none;
+  }
 }
 .videos__cont-vid {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 50px;
+  padding: 50px;
+}
+@media (max-width: 1037px) {
+  .videos__cont-vid {
+    gap: 100px;
+  }
+}
+@media (max-width: 725px) {
+  .videos__cont-vid {
+    padding: 75px;
+  }
+}
+@media (max-width: 600px) {
+  .videos__cont-vid {
+    padding: 0;
+  }
+}
+@media (max-width: 390px) {
+  .videos__cont-vid {
+    gap: 0;
+  }
 }
 .videos__cont-vid h3 {
   font-size: 1.8rem;
@@ -1274,11 +1337,30 @@ h4 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-basis: 560px;
+  flex: 1;
+  min-width: 444px;
+  max-width: 560px;
   background-color: #fff;
   border-radius: 30px;
   overflow: hidden;
   box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.5);
+}
+@media (max-width: 600px) {
+  .videos__cont-vid > * {
+    flex-basis: 100%;
+    max-width: none;
+    border-radius: 0;
+  }
+}
+@media (max-width: 444px) {
+  .videos__cont-vid > * {
+    transform: scale(0.9);
+  }
+}
+@media (max-width: 390px) {
+  .videos__cont-vid > * {
+    transform: scale(0.8);
+  }
 }
 .videos__cont-vid figure {
   width: 100%;
@@ -1287,13 +1369,15 @@ h4 {
   justify-content: center;
   align-items: center;
 }
+.videos__cont-vid figure iframe {
+  width: 100%;
+}
 .videos__cont-vid figcaption {
-  width: 500px;
+  width: 100%;
   padding: 2rem;
   display: flex;
   flex-direction: column;
   gap: 20px;
-  text-align: justify;
 }
 .videos__cont-vid figcaption h3 {
   text-align: center;
@@ -1305,7 +1389,7 @@ h4 {
   background-color: hsl(29, 97%, 86%);
 }
 .videos__cont-vid a {
-  margin-bottom: 30px;
+  margin: 0 auto;
 }
 
 @keyframes color {
